force-app/main/default/objects/LOS_PQ_Income_Source_Automation_Setting__mdt/LOS_PQ_Income_Source_Automation_Setting__mdt.object-meta.xml
<CustomObject>
    <label>LOS PQ Income Source Automation Setting</label>
    <pluralLabel>LOS PQ Income Source Automation Settings</pluralLabel>
</CustomObject>