force-app/main/default/objects/LOS_PQ_Income_Source_Automation_Setting__mdt/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <label>Field API Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>