force-app/main/default/objects/LOS_PQ_Income_Source_Automation_Setting__mdt/fields/Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy__c</fullName>
    <label>Hierarchy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>