force-app/main/default/objects/LOS_PQ_Income_Source_Automation_Setting__mdt/fields/Secondary_Source_of_Income_Ref_Code__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Source_of_Income_Ref_Code__c</fullName>
    <label>Secondary Source of Income Ref Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>