force-app/main/default/objects/LOS_PQ_Income_Source_Automation_Setting__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Field_API_Name__c</columns>
    <columns>Hierarchy__c</columns>
    <columns>Primary_Source_of_Income_Ref_Code__c</columns>
    <columns>Secondary_Source_of_Income_Ref_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>